# GenAI-Pathway

./: .gitignore
challenge-module-11/: .gitignore  README.md  pyproject.toml
challenge-module-11/src/bizlaunch/: app_context.py
challenge-module-11/src/bizlaunch/agents/: ask_clarify_agent.py  location_agent.py  market_agent.py  supervisor.py
challenge-module-11/src/bizlaunch/tools/: api_config.py
licitaciones/: .gitignore  .gitlab-ci.yml  pyproject.toml
licitaciones/data/catalog/: .gitkeep  RCMI_productos.csv  RCTI_productos.csv  RDT_productos.csv
licitaciones/frontend/: index.html  package.json
licitaciones/frontend/src/: App.tsx  index.css
licitaciones/frontend/src/components/extraction/: ExtractionCard.tsx  ItemsList.tsx  index.ts
licitaciones/frontend/src/components/layout/: MainLayout.tsx
licitaciones/frontend/src/components/matching/: MatchCard.tsx
licitaciones/frontend/src/components/ui/: Card.tsx  Spinner.tsx
licitaciones/frontend/src/components/upload/: PageRangeInput.tsx  index.ts
licitaciones/frontend/src/hooks/: useExtractions.ts  useMatching.ts
licitaciones/frontend/src/mocks/: extractions.mock.ts  index.ts  matching.mock.ts
licitaciones/frontend/src/pages/: ExtractionDetailPage.tsx
licitaciones/frontend/src/services/: extraction.service.ts  matching.service.ts
licitaciones/frontend/src/stores/: upload.store.ts
licitaciones/frontend/src/types/: extraction.types.ts  matching.types.ts
licitaciones/poc_files/: servelec.ipynb
licitaciones/poc_files/Docs/: respuestas.txt
licitaciones/src/licitaciones/: app.py  config.py  logger.py
licitaciones/src/licitaciones/Infrastructure/: __init__.py  database.py
licitaciones/src/licitaciones/Infrastructure/persistence/mappers/: __init__.py  producto_mapper.py
licitaciones/src/licitaciones/application/: buscar_por_query_use_case.py
licitaciones/src/licitaciones/db/: catalog.py
licitaciones/src/licitaciones/domain/: db_models.py  enums.py  extraction_models.py
licitaciones/src/licitaciones/domain/entities/: alarma.py  alimentacion.py  especificaciones.py  gabinete.py  producto.py  salida.py  tipo_alarma.py
licitaciones/src/licitaciones/extraction/: __init__.py  pdf_processor.py  product_extractor.py  prompts.py  properties_extractor.py  protocols.py
licitaciones/src/licitaciones/matching/: __init__.py  matcher.py  prompts.py
licitaciones/tests/: test_config.py
(+232 files in other folders)
