[project]
name = "bizlaunch-ai"
version = "0.1.0"
description = "Multi-agent AI assistant for launching businesses"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "pydantic>=2.0.0",
    "langchain-community>=0.3.31",
    "requests>=2.31.0",
    "overpy>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bizlaunch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
